--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -3,8 +3,7 @@
   background: #000;
   color: #fff;
   display: flex;
-  position: sticky;
-  top: 0;
+  width: 100%;
   @include mq.mq($until: tablet) {
     height: 48px;
     padding: 0 12px;
