--- a/src/components/Footer/style.module.scss
+++ b/src/components/Footer/style.module.scss
@@ -1,9 +1,15 @@
 .footer {
-  align-items: center;
-  background: #ca0015;
-  color: #000;
+  background-color: #6777ff;
+  background-repeat: repeat;
+  /* stylelint-disable-next-line csstree/validator */
+  border-top: 1px solid rgba(#fff, 0.5);
+  /* stylelint-disable-next-line csstree/validator */
+  color: rgba(#fff, 0.25);
   display: flex;
+}
+
+.copyrightBlock {
+  color: #fff;
   font-size: 1.4rem;
-  height: 400px;
-  justify-content: center;
+  margin: 36px 0;
 }
