--- a/src/components/App/style.module.scss
+++ b/src/components/App/style.module.scss
@@ -11,6 +11,7 @@
   display: flex;
   height: 95dvh;
   justify-content: center;
+  overflow: hidden;
   position: relative;
 }
 
@@ -107,8 +108,11 @@
   color: rgba(#fff, 0.25);
   display: flex;
   position: relative;
-  @include mq.mq($until: desktop) {
-    padding: 180px 12px 120px;
+  @include mq.mq($until: tablet) {
+    padding: 120px 12px 80px;
+  }
+  @include mq.mq($from: tablet, $until: desktop) {
+    padding: 150px 12px 100px;
   }
   @include mq.mq($from: desktop) {
     padding: 180px 72px 120px;
@@ -120,7 +124,7 @@
 .talentInner,
 .contactInner {
   backdrop-filter: blur(1px);
-  border: 4px dashed #fff;
+  border: 6px dashed #fff;
   border-radius: 0 24px;
   max-width: 1280px;
   position: relative;
@@ -141,8 +145,11 @@
 .heading2Block {
   left: 0;
   position: absolute;
-  @include mq.mq($until: desktop) {
+  @include mq.mq($until: tablet) {
     bottom: calc(100% - 12px);
+  }
+  @include mq.mq($from: tablet, $until: desktop) {
+    bottom: calc(100% - 18px);
   }
   @include mq.mq($from: desktop) {
     bottom: calc(100% - 26px);
@@ -153,8 +160,11 @@
   color: #fff;
   filter: drop-shadow(8px 0 rgba(#063f5c, 0.75));
   letter-spacing: 2px;
-  @include mq.mq($until: desktop) {
+  @include mq.mq($until: tablet) {
     font-size: 7.2rem;
+  }
+  @include mq.mq($from: tablet, $until: desktop) {
+    font-size: 9.6rem;
   }
   @include mq.mq($from: desktop) {
     font-size: 12rem;
@@ -185,11 +195,18 @@
 }
 
 .newsList {
+  display: grid;
+  gap: 24px;
+  justify-content: center;
+  text-align: center;
+}
+
+.newsButton {
+  border-bottom: 2px dashed #063f5c;
   color: #063f5c;
   font-size: 2rem;
   font-weight: 900;
   line-height: 2;
-  text-align: center;
 }
 
 .talentArticle {
@@ -226,8 +243,8 @@
 .debutBlock {
   /* stylelint-disable-next-line csstree/validator */
   background: rgba(#000, 0.125);
-  border: 1px solid #fff;
-  border-radius: 8px;
+  border: 2px solid #fff;
+  border-radius: 50dvmax;
   color: #fff;
   font-weight: 900;
   padding: 4px 12px;
@@ -265,7 +282,7 @@
   /* stylelint-disable-next-line csstree/validator */
   background-color: rgba(#000, 0.125);
   background-repeat: repeat;
-  border-radius: 12px;
+  border-radius: 0 12px;
   color: #fff;
   position: relative;
 }
@@ -284,11 +301,17 @@
 .talentFuriganaBlock {
   color: #fff;
   filter: drop-shadow(4px 4px rgba(#063f5c, 0.5));
-  font-size: 2.4rem;
+  font-family: arial, sans-serif;
   font-weight: 900;
   padding: 8px;
   position: absolute;
   writing-mode: vertical-rl;
+  @include mq.mq($until: desktop) {
+    font-size: 2.4rem;
+  }
+  @include mq.mq($from: desktop) {
+    font-size: 2.8rem;
+  }
 }
 
 .talentImageWrapper {
@@ -375,6 +398,7 @@
 .textarea {
   background: #fff;
   color: #063f5c;
+  font-family: arial, sans-serif;
   font-size: 1.6rem;
   line-height: 1.5;
   padding: 12px;
@@ -392,9 +416,10 @@
 
 .button {
   background: #063f5c;
+  border: 4px solid #fff;
   border-radius: 100vmax;
   color: #fff;
   font-size: 1.8rem;
   font-weight: 900;
-  padding: 12px 24px;
+  padding: 12px 36px;
 }
