--- a/src/components/Footer/style.module.scss
+++ b/src/components/Footer/style.module.scss
@@ -6,8 +6,14 @@
   display: flex;
 }
 
+.footerInner {
+  display: grid;
+  text-align: center;
+}
+
 .copyrightBlock {
   color: #fff;
   font-size: 1.4rem;
-  margin: 36px 0;
+  font-weight: 900;
+  margin: -24px 0 60px;
 }
