--- a/src/components/Talent/style.module.scss
+++ b/src/components/Talent/style.module.scss
@@ -65,9 +65,6 @@
 .nameInner {
   rotate: -12.5deg;
   text-align: center;
-  @include mq.mq($until: tablet) {
-    padding: 0 12px;
-  }
   @include mq.mq($from: tablet) {
     padding: 0 72px;
   }
@@ -91,6 +88,11 @@
 
 .furiganaBlock {
   color: #6777ff;
+  filter: drop-shadow(2px 2px 2px rgba(#fff, 0.5))
+    drop-shadow(2px -2px 2px rgba(#fff, 0.5))
+    drop-shadow(-2px 2px 2px rgba(#fff, 0.5))
+    drop-shadow(-2px -2px 2px rgba(#fff, 0.5))
+    drop-shadow(4px 4px 4px rgba(#fff, 0.25));
   font-style: italic !important;
   @include mq.mq($until: tablet) {
     font-size: 1.8rem;
@@ -129,18 +131,33 @@
     grid-template: auto / 100%;
   }
   @include mq.mq($from: desktop) {
-    grid-template: auto / repeat(2, 1fr);
+    grid-template: auto / 1fr auto 1fr;
   }
 }
 
 .profileBlock {
-  font-size: 1.8rem;
+  font-size: 2rem;
+}
+
+.hr {
+  @include mq.mq($until: desktop) {
+    border-bottom: 0;
+    border-top: 2px dashed #fff;
+    height: 0;
+    width: 100%;
+  }
+  @include mq.mq($from: desktop) {
+    border-left: 2px dashed #fff;
+    border-right: 0;
+    height: 100%;
+    width: 0;
+  }
 }
 
 .detailList {
   align-content: flex-start;
   display: grid;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   gap: 4px 36px;
   grid-template: auto / auto 1fr;
 }
@@ -157,11 +174,19 @@
 }
 
 .button {
-  background: #6777ff;
-  border: 1px solid #fff;
-  border-radius: 4px;
-  color: #fff;
-  font-size: 1.4rem;
-  font-weight: 900;
+  backdrop-filter: blur(1px);
+  /* stylelint-disable-next-line csstree/validator */
+  background-color: rgba(#6777ff, 0.95);
+  background-repeat: repeat;
+  border: 2px solid #fff;
+  border-radius: 50dvmax;
+  /* stylelint-disable-next-line csstree/validator */
+  color: rgba(#fff, 0.25);
   padding: 2px 0;
+}
+
+.buttonText {
+  color: #fff;
+  font-size: 1.8rem;
+  font-weight: 900;
 }
