--- a/src/components/App/style.module.scss
+++ b/src/components/App/style.module.scss
@@ -144,6 +144,7 @@
 
 .heading2Block {
   left: 0;
+  overflow: hidden;
   position: absolute;
   @include mq.mq($until: tablet) {
     bottom: calc(100% - 12px);
