--- a/src/components/Talent/style.module.scss
+++ b/src/components/Talent/style.module.scss
@@ -36,15 +36,23 @@
   }
 }
 
-.talentImage {
+.talentImage,
+.noDataImage {
   filter: drop-shadow(12px 12px rgba(#063f5c, 0.5));
   object-position: top;
+}
+
+.talentImage {
   @include mq.mq($until: tablet) {
     object-fit: cover;
   }
   @include mq.mq($from: tablet) {
     object-fit: contain;
   }
+}
+
+.noDataImage {
+  object-fit: contain;
 }
 
 .nameWrapper {
@@ -65,9 +73,6 @@
 .nameInner {
   rotate: -12.5deg;
   text-align: center;
-  @include mq.mq($from: tablet) {
-    padding: 0 72px;
-  }
 }
 
 .nameBlock {
@@ -78,12 +83,23 @@
     drop-shadow(-2px -2px 2px rgba(#6777ff, 0.5))
     drop-shadow(4px 4px 4px rgba(#063f5c, 0.25));
   font-style: italic !important;
+  position: relative;
   @include mq.mq($until: tablet) {
-    font-size: 7.2rem;
+    font-size: 6rem;
   }
-  @include mq.mq($from: tablet) {
+  @include mq.mq($from: tablet, $until: desktop) {
+    font-size: 8.4rem;
+  }
+  @include mq.mq($from: desktop) {
     font-size: 10.8rem;
   }
+}
+
+.heading1 {
+  height: 1px;
+  opacity: 0;
+  position: absolute;
+  width: 1px;
 }
 
 .furiganaBlock {
@@ -189,4 +205,201 @@
   color: #fff;
   font-size: 1.8rem;
   font-weight: 900;
+}
+
+.talentArticle {
+  background-color: #57e650;
+  background-repeat: repeat;
+  /* stylelint-disable-next-line csstree/validator */
+  color: rgba(#fff, 0.25);
+  display: flex;
+  position: relative;
+  @include mq.mq($until: tablet) {
+    padding: 120px 12px 80px;
+  }
+  @include mq.mq($from: tablet, $until: desktop) {
+    padding: 150px 12px 100px;
+  }
+  @include mq.mq($from: desktop) {
+    padding: 180px 72px 120px;
+  }
+}
+
+.talentInner {
+  backdrop-filter: blur(1px);
+  border: 6px dashed #fff;
+  border-radius: 0 24px;
+  max-width: 1280px;
+  position: relative;
+  width: 100%;
+}
+
+.heading2Block {
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  @include mq.mq($until: tablet) {
+    bottom: calc(100% - 12px);
+  }
+  @include mq.mq($from: tablet, $until: desktop) {
+    bottom: calc(100% - 18px);
+  }
+  @include mq.mq($from: desktop) {
+    bottom: calc(100% - 26px);
+  }
+}
+
+.heading2 {
+  color: #fff;
+  filter: drop-shadow(8px 0 rgba(#063f5c, 0.75));
+  letter-spacing: 2px;
+  @include mq.mq($until: tablet) {
+    font-size: 7.2rem;
+  }
+  @include mq.mq($from: tablet, $until: desktop) {
+    font-size: 9.6rem;
+  }
+  @include mq.mq($from: desktop) {
+    font-size: 12rem;
+  }
+}
+
+.talentWrapper2 {
+  display: grid;
+  @include mq.mq($until: tablet) {
+    gap: 12px;
+    padding: 12px 12px 48px;
+  }
+  @include mq.mq($from: tablet, $until: desktop) {
+    gap: 24px;
+    padding: 24px 12px 48px;
+  }
+  @include mq.mq($from: desktop) {
+    gap: 36px;
+    padding: 36px 48px 48px;
+  }
+}
+
+.debutsWrapper {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 4px;
+}
+
+.debutBlock {
+  /* stylelint-disable-next-line csstree/validator */
+  background: rgba(#000, 0.125);
+  border: 2px solid #fff;
+  border-radius: 50dvmax;
+  color: #fff;
+  font-weight: 900;
+  padding: 4px 12px;
+  @include mq.mq($until: desktop) {
+    font-size: 1.6rem;
+  }
+  @include mq.mq($from: desktop) {
+    font-size: 1.8rem;
+  }
+}
+
+.currentDebutBlock {
+  background: #fff;
+  color: #96db99;
+}
+
+.talentsWrapper {
+  display: grid;
+  @include mq.mq($until: tablet) {
+    gap: 24px 12px;
+    grid-template: auto / repeat(2, 1fr);
+  }
+  @include mq.mq($from: tablet, $until: desktop) {
+    gap: 24px 12px;
+    grid-template: auto / repeat(3, 1fr);
+  }
+  @include mq.mq($from: desktop) {
+    gap: 60px 24px;
+    grid-template: auto / repeat(4, 1fr);
+  }
+}
+
+.talentBlock {
+  aspect-ratio: 9 / 16;
+  /* stylelint-disable-next-line csstree/validator */
+  background-color: rgba(#000, 0.125);
+  background-repeat: repeat;
+  border-radius: 0 12px;
+  color: #fff;
+  position: relative;
+}
+
+.talentNameBlock {
+  left: 0;
+  top: 0;
+}
+
+.talentFuriganaBlock {
+  bottom: 0;
+  right: 0;
+}
+
+.talentNameBlock,
+.talentFuriganaBlock {
+  color: #fff;
+  filter: drop-shadow(4px 4px rgba(#063f5c, 0.5));
+  font-family: arial, sans-serif;
+  font-weight: 900;
+  padding: 8px;
+  position: absolute;
+  writing-mode: vertical-rl;
+  @include mq.mq($until: desktop) {
+    font-size: 2.4rem;
+  }
+  @include mq.mq($from: desktop) {
+    font-size: 2.8rem;
+  }
+}
+
+.talentImageWrapper2 {
+  height: 100%;
+  position: absolute;
+  width: 100%;
+}
+
+.talentImageFigure {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  @include mq.mq($until: desktop) {
+    height: 108%;
+    top: -4%;
+  }
+  @include mq.mq($from: desktop) {
+    height: 112%;
+    top: -6%;
+  }
+}
+
+.talentImage2,
+.noDataImage2 {
+  @include mq.mq($until: desktop) {
+    filter: drop-shadow(4px 4px rgba(#063f5c, 0.75));
+    height: 94% !important;
+  }
+  @include mq.mq($from: desktop) {
+    filter: drop-shadow(8px 8px rgba(#063f5c, 0.75));
+    height: 96% !important;
+  }
+  left: 50% !important;
+  top: 50% !important;
+  transform: translate(-50%, -50%);
+  width: auto !important;
+}
+
+.talentImage2 {
+  object-fit: cover;
+}
+
+.noDataImage2 {
+  object-fit: contain;
 }
