--- a/src/app/mq-settings.scss
+++ b/src/app/mq-settings.scss
@@ -1,5 +1,5 @@
 /* stylelint-disable-next-line plugin/sass-render-errors */
-@use "app/breakpoints" as *;
+@use "@/app/breakpoints" as *;
 
 @use "sass-mq" with (
   $breakpoints: $breakpoints,
