--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -1,25 +1,43 @@
 .header {
   backdrop-filter: blur(1px);
   /* stylelint-disable-next-line csstree/validator */
-  background-color: rgba(#6777ff, 0.95);
+  background-color: rgba(#063f5c, 0.95);
   background-repeat: repeat;
-  border: 2px solid #fff;
+  border: 4px solid #fff;
   border-radius: 50dvmax;
   /* stylelint-disable-next-line csstree/validator */
   color: rgba(#fff, 0.25);
   display: flex;
+  justify-content: center;
   max-width: 1280px;
+  position: relative;
   width: 100%;
 }
 
 .list {
   display: flex;
   gap: 36px;
-  margin: 8px 0;
+  margin: 12px 0;
 }
 
 .link {
   color: #fff;
   font-size: 1.8rem;
   font-weight: 900;
+  transition: 250ms;
+}
+
+.active {
+  color: #6777ff;
+}
+
+.iconBlock {
+  border-radius: 50dvmax;
+  height: 36px;
+  margin: -18px 0 0;
+  overflow: hidden;
+  position: absolute;
+  right: 8px;
+  top: 50%;
+  width: 36px;
 }
