--- a/src/components/TalentsBlock/style.module.scss
+++ b/src/components/TalentsBlock/style.module.scss
@@ -14,6 +14,12 @@
 }
 
 .talentImageInner {
+  display: flex;
+  height: 100%;
+  justify-content: center;
+}
+
+.talentImageInner2 {
   height: 100%;
   position: relative;
 }
