--- a/src/components/Layout/style.module.scss
+++ b/src/components/Layout/style.module.scss
@@ -11,9 +11,9 @@
 }
 
 .headerBlock {
-  height: calc(100% - 95dvh);
+  height: calc(100% - 95svh);
   position: absolute;
-  top: 95dvh;
+  top: 95svh;
   width: 100%;
 }
 
