--- a/src/components/TalentTop/style.module.scss
+++ b/src/components/TalentTop/style.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  height: 95dvh;
+  height: 95svh;
   position: relative;
 }
 
@@ -23,7 +23,7 @@
 }
 
 .imageBlock {
-  height: 190dvh;
+  height: 190svh;
   margin: 12px 0 0;
   position: relative;
 }
