--- a/apps/admin/src/components/Blog/style.module.scss
+++ b/apps/admin/src/components/Blog/style.module.scss
@@ -1,11 +1,22 @@
 .wrapper {
+  display: flex;
+  justify-content: center;
   padding: 12px;
 }
 
 .table {
-  width: 100%;
+  text-align: left;
+  /* stylelint-disable-next-line csstree/validator */
+  width: min(100%, 1280px);
 }
 
 .tr {
+  /* stylelint-disable-next-line csstree/validator */
   box-shadow: inset 0 -1px 0 0 rgba(#000, 0.25);
+  cursor: pointer;
+}
+
+.th:not(:first-child),
+.td:not(:first-child) {
+  padding: 12px;
 }
