--- a/apps/admin/src/components/Button/style.module.scss
+++ b/apps/admin/src/components/Button/style.module.scss
@@ -1,6 +1,12 @@
 .button {
   background: #fff;
-  border: 1px solid #333;
-  border-radius: 50dvmax;
-  padding: 4px 12px;
+  border: 1px solid #d0d7de;
+  border-radius: 3px;
+  font-size: 1.2rem;
+  font-weight: 900;
+  padding: 4px 16px;
+}
+
+.button:disabled {
+  opacity: 0.5;
 }
